--- a/contact-us.html
+++ b/contact-us.html
@@ -60,8 +60,6 @@
 
     <section class="container margin-bottom-100">
 
-      <div class="row">
-
         <form class="contactForm">
         <div class="row">
           <div class="col-sm-4">
@@ -86,7 +84,7 @@
 
             <!-- Text input-->
             <div class="form-group">
-              <input id="companyname" name="companyname" type="text" placeholder="Company Name" class="form-control input-md">
+              <input id="grade" name="companyname" type="text" placeholder="Grade" class="form-control input-md">
             </div>
 
           </div>
@@ -95,7 +93,7 @@
 
             <!-- Text input-->
             <div class="form-group">
-              <input id="contactnumber" name="contactnumber" type="text" placeholder="Contact  Number" class="form-control input-md" required="">
+              <input id="subject" name="contactnumber" type="text" placeholder="Subject Needing Assistance With" class="form-control input-md" required="">
             </div>
 
           </div>
@@ -104,20 +102,18 @@
 
             <!-- Text input-->
             <div class="form-group">
-              <input id="email" name="email" type="text" placeholder="Email" class="form-control input-md" required="">
+              <select id="onlineInperson" class="form-control input-md">
+                <option value="" disabled selected>Online Tutoring Or In Person</option>
+                <option value="online">Online</option>
+                <option value="inPerson">In person</option>
+            </select>
             </div>
 
           </div>
 
           <div class="col-sm-4">
-
-          </div>
-
-          <div class="col-sm-12">
-
-            <!-- Textarea -->
             <div class="form-group">
-                <textarea class="form-control" id="message" name="message">What can we do for you?</textarea>
+            <input id="subject" name="sessions" type="text" placeholder="How many sessions per week" class="form-control input-md" required="">
             </div>
 
           </div>
