--- a/blog-page.html
+++ b/blog-page.html
@@ -39,7 +39,7 @@
         <a class="nav-link" href="blog.html">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact-us.html">Contact Us</a>
+        <a class="nav-link" href="contact-us.html">Request a quote</a>
       </li>
       </ul>
       </div>
