--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,7 @@
         <a class="nav-link" href="blog.html">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact-us.html">Contact Us</a>
+        <a class="nav-link" href="contact-us.html">Request a quote</a>
       </li>
       </ul>
       </div>
@@ -50,7 +50,7 @@
           <div class="col-sm-12">
             <div class="headerBlock">
               <img src="images/logo.jpg" alt="">
-              <h2>Contact us</h2>
+              <h2>Request a quote</h2>
             </div>
           </div>
         </div>
