--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a class="nav-link" href="blog.html">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact-us.html">Contact Us</a>
+        <a class="nav-link" href="contact-us.html">Request a quote</a>
       </li>
       </ul>
       </div>
@@ -118,7 +118,7 @@ world-class guidance and help you achieve your best.</p>
               </div>
 
               <div class="">
-                <img src="icons/023-e learning.png" alt="">
+                <img src="icons/023-e-learning.png" alt="">
                 <h3>Guaranteed results</h3>
                 <p>At BH LEARNING CENTRE, we teach students to work smarter, not harder. With innovative teaching
 techniques, qualified instructors, and quality learning materials, we help students strengthen their
@@ -165,7 +165,7 @@ find a payment option that suits your needs.</p>
 
       <div class="row">
         <div class="col-sm-12">
-          <h2>Latest News</h2>
+          <h2>Whats new</h2>
         </div>
 
       </div>
@@ -194,7 +194,7 @@ find a payment option that suits your needs.</p>
             </article>
 
             <article>
-              <img src="images/blog1.jpg" class="blogImage" alt="">
+              <img src="images/blog3.jpg" class="blogImage" alt="">
               <span>
                 <h5>Get more traffic to your website</h5>
                 <p class="date">2 November 2020</p>
