--- a/about-us.html
+++ b/about-us.html
@@ -84,7 +84,8 @@
         </div>
 
           <div class="col-sm-6">
-            <img src="images/students.jpg" alt="">
+            <img class="width100p" src="images/students.jpg" alt="">
+            <a class="btn btn-primary btn-lg btn-block margin-top-50" href="#">Get free quote</a>
           </div>
 
       </div>
