--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <h1><span>BH</span> <br>
               Learning Center</h1>
               <p>Excellent tutoring services for you</p>
-              <a href="#section2">Get free quote</a>
+              <a href="#">Get free quote</a>
             </div>
           </div>
         </div>
@@ -88,7 +88,7 @@
 
         <div class="col-md-4">
 
-          <img src="images/lady.png" alt="">
+          <img class="mobileDisplayNone" src="images/lady.png" alt="">
 
         </div>
 
